--- a/widget.ui
+++ b/widget.ui
@@ -81,6 +81,16 @@
     <string>0</string>
    </property>
   </widget>
+  <widget class="QTextBrowser" name="textBrowser">
+   <property name="geometry">
+    <rect>
+     <x>1140</x>
+     <y>110</y>
+     <width>256</width>
+     <height>391</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
